fixed filter problem with csv contact list download, aligned UI

--- a/src/index.css
+++ b/src/index.css
@@ -58,19 +58,18 @@ body {
 }
 
 .five {
-  padding-top: 55px;
   grid-column: 2;
   grid-row: 3;
 }
 
 .six {
   grid-column: 2;
-  grid-row: 2;
+  grid-row: 4;
 }
 
 .seven {
   grid-column: 2;
-  grid-row: 1;
+  grid-row: 2;
 }
 
 label {
